# cppfolio

./: .gitignore  CMakeLists.txt
libs/: CMakeLists.txt
public/css/: nav.css  style.css  theme.css
public/js/: script.js  utils.js
src/: main.cpp
src/config/: disk.json
src/controllers/: Controller.cpp  Controller.h  ControllerBasic.cpp  ControllerBasic.h  ControllerBlog.cpp  ControllerBlog.h
src/server/: Router.cpp  Router.h  Server.cpp  Server.h
src/utils/: Env.cpp  Env.h  Logger.cpp  Logger.h  Parser.cpp  Parser.h  Path.cpp  Path.h
src/utils/json/: Container.h  Disk.cpp  Disk.h  JsonModelBase.cpp  JsonModelBase.h  Views.cpp  Views.h
src/utils/storage/: Storage.h
src/views/: index.html
src/views/pages/: Blog.html
src/views/pages/Embedded System/: Secure connection di iot device.html
src/views/pages/Embedded-System/: Secure-connection-di-iot-device.html
src/views/templates/: blog.tmpl
storage/app/public/: page_entries.json
